--- a/Inkscape.desktop
+++ b/Inkscape.desktop
@@ -11,7 +11,7 @@ Comment[id]=Membuat dan mengedit gambar Scalable Vector Graphics
 Type=Application
 Categories=Graphics;VectorGraphics;GTK;
 MimeType=image/svg+xml;image/svg+xml-compressed;application/vnd.corel-draw;image/x-eps;application/illustrator;
-Exec=python3 /home/rania/.config/inkscape/splash/inkscape-splash-wrapper.py
+Exec=python3 /usr/share/inkscape/splash/inkscape-splash-wrapper.py
 TryExec=inkscape
 Terminal=false
 StartupNotify=true
